--- a/css/style.css
+++ b/css/style.css
@@ -208,9 +208,13 @@ body {
   color: #ffffff;
   background: #131313;
   padding: 28px 81px;
+  box-shadow: 0 15px 15px black;
+  border-radius: 15px;
 }
 
 .bike-title__btn__inner:hover {
+  box-shadow: 0 5px 5px black;
+  transition: 0.5s;
   background-color: #ff4040;
 }
 
@@ -597,9 +601,14 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   background: #131313;
+  box-shadow: 0 15px 15px black;
+  border-radius: 15px;
+  top: 0;
 }
 
 .buy__button__link:hover {
+  top: 5px;
+  box-shadow: 0 10px 10px black;
   background-color: #ff4040;
 }
 
