--- a/css/style.css
+++ b/css/style.css
@@ -603,11 +603,10 @@ body {
   background: #131313;
   box-shadow: 0 15px 15px black;
   border-radius: 15px;
-  top: 0;
 }
 
 .buy__button__link:hover {
-  top: 5px;
+  transition: 0.3s;
   box-shadow: 0 10px 10px black;
   background-color: #ff4040;
 }
