--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
   line-height: calc(17 / 14 * 100%);
   color: #131313;
   padding: 42px 20px 41px 18px;
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 
 .header__top__nav-link:not(:last-child) {
@@ -128,6 +128,7 @@ body {
 }
 
 .header__top__nav-link:hover {
+  transform: scale(1.2);
   color: white;
   background-color: #131313;
 }
@@ -228,6 +229,13 @@ body {
 }
 .bike-title__right__img {
   margin-bottom: 25px;
+}
+.bike-title__right__img__item {
+  transition: all 0.5s;
+}
+
+.bike-title__right__img__item:hover {
+  transform: scale(1.1);
 }
 .bike-title__right__info {
   min-width: 500px;
@@ -648,6 +656,12 @@ body {
   z-index: 1;
 }
 .buy-flex__bike__inner {
+}
+.buy-change-color__inner {
+  transition: all 0.4s;
+}
+.buy-change-color__inner:hover {
+  transform: scale(1.3);
 }
 
 @media (max-width: 1185px) {
