--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ body {
     text-align: center;
   }
 
+
   .header__top__nav {
     min-width: 100%;
     margin-top: 30px;
@@ -155,6 +156,7 @@ body {
     min-width: 100%;
   }
 }
+.
 
 /*------------------------------------------------------------------------------------*/
 
